More typo fixed

--- a/BeamerExample/main.tex
+++ b/BeamerExample/main.tex
@@ -88,7 +88,7 @@ Sample text in red box
 \end{alertblock}
 
 \begin{exampleblock}{Examples}
-Sample text in green box. The title of the block is "Examples".
+Sample text in green box. The title of the block is ``Example''.
 \end{exampleblock}
 \end{frame}
 %---------------------------------------------------------
@@ -104,7 +104,9 @@ Sample text in green box. The title of the block is "Examples".
 
 \column{0.5\textwidth}
 This is a text in first column.
-$$E=mc^2$$
+\begin{align*}
+  E=mc^2
+\end{align*}
 \begin{itemize}
 \item First item $\ell$
 \item Second item
@@ -112,7 +114,7 @@ $$E=mc^2$$
 
 \column{0.5\textwidth}
 This text will be in the second column
-and on a second tought this is a nice looking
+and on a second thought this is a nice looking
 layout in some cases.
 \end{columns}
 \end{frame}
