--- a/ECE226Quiz/main.tex
+++ b/ECE226Quiz/main.tex
@@ -4,7 +4,7 @@
 \newcommand{\lefthead}{ECE 14:332:226}
 \newcommand{\centerhead}{\textbf{Probability And Random Processes}}                 
 \newcommand{\righthead}{Spring 2023}
-\newcommand{\leftbottom}{TA: Kailong Wang}   
+\newcommand{\leftbottom}{TA:\@ Kailong Wang}   
 \newcommand{\centerbottom}{\thepage}
 \newcommand{\rightbottom}{kailong.wang@outlook.com}        
 
@@ -29,9 +29,8 @@
 \maketitle
 
 \noindent
-Name: \myrule \hfill Signature: \myrule \\
-NetID: \myrule \hfill RUID: \myrule
-
+Name: \myrule\hfill Signature: \myrule\\
+NetID:\@ \myrule\hfill RUID:\@ \myrule\\
 \begin{center}
     \fbox{
         \begin{minipage}{0.8\textwidth}
