--- a/ECE226Note/collection/chapter4.tex
+++ b/ECE226Note/collection/chapter4.tex
@@ -122,7 +122,7 @@ Start with a continuous random variable $X$ with CDF $F_X(x)$. The probability o
                 \end{cases}
             } \\
             F_X(x)
-            &= 1-\sum_{k=0}^{n-1}\frac{(\lambda x)^ke^{-\lambda x}}{k!} = \mathbb{P}_{\mathbf{poisson}}(k\geq n). \\
+            &= 1-\sum_{k=0}^{n-1}\frac{(\lambda x)^k e^{-\lambda x}}{k!} = \mathbb{P}_{\mathbf{poisson}}(k\geq n). \\
             \E{X}
             &= n/\lambda. \\
             \Var[X]
@@ -148,7 +148,7 @@ Start with a continuous random variable $X$ with CDF $F_X(x)$. The probability o
 \end{theorem}
 
 \begin{theorem}
-    If $X$ is $\Gaus(\mu,\sigma)$, $Y=aX+b$ is $\Gaus(a\mu+b,a\sigma).$
+    If $X$ is $\Gaus(\mu,\sigma)$, $Y=aX+b$ is $\Gaus(a\mu+b,a\sigma)$.
 \end{theorem}
 
 \begin{theorem}[Standard Normal Random Variable]
@@ -161,17 +161,17 @@ Start with a continuous random variable $X$ with CDF $F_X(x)$. The probability o
 \begin{theorem}
     If $X$ is $\Gaus(\mu,\sigma)$, the \emph{CDF} of $X$ is 
     \[F_X(x)=\Phi\parens*{\frac{x-\mu}{\sigma}}.\]
-    The probability that $X$ is in the interval \emph{$(a,b]$} is
+    The probability that $X$ is in the interval \emph{$(a,b)$} is
     \[\P{a<X\leq b}=\Phi\parens*{\frac{b-\mu}{\sigma}}-\Phi\parens*{\frac{a-\mu}{\sigma}}.\]
 \end{theorem}
 
 \begin{theorem}
-    $\Phi(-z)=1-\Phi(z).$
+    $\Phi(-z)=1-\Phi(z)$.
 \end{theorem}
 
 % \includegraphics[width=\textwidth, center]{normal_cdf.pdf}
 
-\section{Delta Function, Mixed(Being Discrete and Continuous at the same time) Random Variable}
+\section{Delta Function, Mixed (Being Discrete and Continuous at the same time) Random Variable}
 \begin{definition}[Unit Impulse (Delta) Function]
     Let
     \[d_{\epsilon}(x)={
@@ -209,7 +209,7 @@ Start with a continuous random variable $X$ with CDF $F_X(x)$. The probability o
 \end{theorem}
 
 \begin{corollary}
-    The~\cref{delta} allows us to define a generalized \emph{PDF} that applies to discrete random variables as well as to continuous random variables. Consider the \emph{CDF} of a discrete random variable, $X$. It is constant(let's say $0$ for now) everywhere except at point $x_i\in S_X$, where it has jumps of height $P_X(x_i)$. Using the \textbf{unit step function}, the \emph{CDF} of $X$ is 
+    The~\cref{delta} allows us to define a generalized \emph{PDF} that applies to discrete random variables as well as to continuous random variables. Consider the \emph{CDF} of a discrete random variable, $X$. It is constant (let's say $0$ for now) everywhere except at point $x_i\in S_X$, where it has jumps of height $P_X(x_i)$. Using the \textbf{unit step function}, the \emph{CDF} of $X$ is 
     \[F_X(x)=\sum_{x_i\in S_X} P_X(x_i)u(x-x_i).\]
     And the \emph{PDF} can be defined with $\delta(x)$ as
     \[f_X(x)=\sum_{x_i\in S_X}P_X(x_i)\delta(x-x_i).\]
@@ -217,7 +217,7 @@ Start with a continuous random variable $X$ with CDF $F_X(x)$. The probability o
     \begin{align*}
         \E{X} &= \int_{-\infty}^{\infty}x\sum_{x_i\in S_X}P_X(x_i)\delta(x-x_i)\diff x \\
         \E{X} &= \sum_{x_i\in S_X}\int_{-\infty}^{\infty}xP_X(x_i)\delta(x-x_i)\diff x \\
-        &= \sum_{x_i\in S_X}x_iP_X(x_i)
+        &= \sum_{x_i\in S_X}x_i P_X(x_i)
     \end{align*}
 \end{corollary}
 
