--- a/ECE226Note/collection/chapter5.tex
+++ b/ECE226Note/collection/chapter5.tex
@@ -46,12 +46,12 @@ For discrete random variables, the marginal PMF $P_X(x)$ and $P_Y(y)$ are probab
 
 \section{Joint PDF}
 \begin{definition}[Joint PDF]
-    The joint PDF of continuous random variables $X$ and $Y$ is a function $f_{X,Y}(x,y)$ with the property
+    The joint CDF of continuous random variables $X$ and $Y$ is a function $f_{X,Y}(x,y)$ with the property
     \[F_{X,Y}(x,y)=\int_{-\infty}^{x}\int_{-\infty}^{y}f_{X,Y}(u,v)\diff u \diff v.\]
 \end{definition}
 
-Apparently, we have
-\[f_{X,Y}(x,y)=\frac{\partial^2}{\partial x\partial y}F_{X,Y}(x,y).\]
+Apparently, we can then derive the joint PDF as follows,
+\[f_{X,Y}(x,y)=\frac{\diff^2}{\diff x \diff y}F_{X,Y}(x,y).\]
 The joint PDF is a \textbf{complete} probability model for any pair of continuous random variables $X$ and $Y$.
 
 \begin{theorem}
