different notation for partical/diff

--- a/ECE226Note/collection/chapter5.tex
+++ b/ECE226Note/collection/chapter5.tex
@@ -51,7 +51,7 @@ For discrete random variables, the marginal PMF $P_X(x)$ and $P_Y(y)$ are probab
 \end{definition}
 
 Apparently, we can then derive the joint PDF as follows,
-\[f_{X,Y}(x,y)=\frac{\diff^2}{\diff x \diff y}F_{X,Y}(x,y).\]
+\[f_{X,Y}(x,y)=\frac{\partial^2}{\partial x \partial y}F_{X,Y}(x,y).\]
 The joint PDF is a \textbf{complete} probability model for any pair of continuous random variables $X$ and $Y$.
 
 \begin{theorem}
