Save to be Safe

--- a/Formats/Macro.tex
+++ b/Formats/Macro.tex
@@ -9,8 +9,8 @@
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
 %%%% math operators naming
-\DeclareMathOperator{\argmax}{\mathrm{argmax}}
-\DeclareMathOperator{\argmin}{\mathrm{argmin}}
+\DeclareMathOperator*{\argmax}{\mathrm{argmax}}
+\DeclareMathOperator*{\argmin}{\mathrm{argmin}}
 \DeclareMathOperator{\tr}{\mathrm{tr}}
 \DeclareMathOperator{\eig}{\mathrm{eig}}
 \DeclareMathOperator{\sgn}{\mathrm{sgn}}
